<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uoft.assignment4.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label"
        android:text="@string/label"
        android:gravity="top"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollHorizontally="true"
        android:id="@+id/enter_url"
        android:text="@string/defaultvalue"
        android:layout_below="@id/label"
        android:singleLine="true" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button android:id="@+id/clear"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@color/button"
            android:textColor="@color/buttontext"
            android:text="@string/clear" />

        <Button android:id="@+id/populate"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@color/button"
            android:textColor="@color/buttontext"
            android:text="@string/populate"/>

        <Button android:id="@+id/search"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textColor="@color/buttontext"
            android:background="@color/button"
            android:text="@string/search"/>

    </LinearLayout>

</RelativeLayout>
